example/var.js
{
  // var
  a = 1;
  console.log("variables a:", a);
  a = 5;
  console.log("variables assigned a:", a);
}

{
  let b = 2;
  console.log("variables b:", b);
  b = 6;
  console.log("variables assigned b:", b);
}

{
  const c = 3;
  console.log("variables c:", c);
  // c = 7; // error
  // const c = 7; // error
}